# ai-powered-video-analyzer

./: .gitignore  CHANGELOG.md  README.md  environment.yml  pip_requirements.txt  pyproject.toml  video_processing.py  video_processing_gui.py
ai_powered_video_analyzer/: __init__.py  audio.py  captioning.py  cli.py  config.py  core.py  diagnostics.py  frames.py  logging_utils.py  reports.py  summarization.py  transcription.py
ai_powered_video_analyzer/backends/: __init__.py  base.py  legacy_yolo_backend.py  null_backend.py  visionservex_backend.py  yolo_backend.py
docs/: LLM_AGENT_GUIDE.md  USER_GUIDE.md
reports/benchmarks/v0.3.0/: README.md  results.json
reports/benchmarks/v1.0/: README.md  results.json
reports/benchmarks/v1.1/: README.md  results.json
reports/quality/: v1.0-checklist.md  v1.1-final-audit.md
tests/: test_backends.py  test_cli.py  test_config.py  test_dependencies.py  test_diagnostics.py  test_frames.py  test_reports.py
