[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-powered-video-analyzer"
version = "1.0.1"
description = "Offline, privacy-first AI video analysis: object detection, captioning, transcription, and LLM summarization."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Arash Sajjadi", email = "arash.sajjadi@usask.ca"}]
maintainers = [{name = "Arash Sajjadi", email = "arash.sajjadi@usask.ca"}]
keywords = ["video", "ai", "computer-vision", "offline", "privacy", "visionservex", "dfine", "whisper", "blip"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"

# Core: frame decoding and basic types only.
# No model weights, no heavy ML frameworks.
dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
# VisionServeX detection backend (required for object detection)
vision = [
    "visionservex>=3.11.0",
]

# Full local AI stack: detection + transcription + captioning + audio + summarization
full = [
    "visionservex>=3.11.0",
    "torch>=2.0",
    "openai-whisper>=20231117",
    "transformers>=4.35",
    "librosa>=0.10",
    "soundfile>=0.12",
    "moviepy>=1.0",
    "panns-inference>=0.1",
    "ollama>=0.3",
]

# GUI (Tkinter-based)
gui = [
    "ai-powered-video-analyzer[full]",
    "opencv-python>=4.8",
]

# Legacy YOLO/Ultralytics backend (not the default; not recommended for new installs)
legacy-yolo = [
    "ultralytics>=8.0",
]

# Development and testing
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
ai-video-analyzer = "ai_powered_video_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/arashsajjadi/ai-powered-video-analyzer"
Issues = "https://github.com/arashsajjadi/ai-powered-video-analyzer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_powered_video_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
